# iec104bridge

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml
demo/: README.md  docker-compose.yml
demo/grafana/dashboards/: iec104-demo.json
demo/grafana/provisioning/dashboards/: config.yml
demo/grafana/provisioning/datasources/: datasources.yml
demo/nats/: nats1.conf  nats2.conf  nats3.conf
demo/prometheus/: prometheus.yml
demo/publisher/: Dockerfile  publisher.py
demo/scraper/: Dockerfile  scraper.py
examples/: messages.jsonl
src/: bridge.rs  config.rs  e2e_tests.rs  main.rs  message.rs  source.rs  tls.rs
