[package]
name = "iec104bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
async-nats = "0.46"
lib60870 = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
