[package]
name = "iec104bridge"
version = "0.1.0"
license = "GPL-3.0-or-later"
edition = "2024"

[dependencies]
async-nats = { version = "0.46", features = ["nkeys"] }
lib60870 = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

# IEC 62351-3 / mTLS support
rustls          = { version = "0.23", default-features = false, features = ["std", "tls12"] }
tokio-rustls    = "0.26"
rustls-pemfile  = "2"

[dev-dependencies]
tempfile = "3"
